fix: editorWrap css fixed for mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,9 @@ footer a{
 }
 
 .mainWrap {
-  display: grid;
-  grid-template-columns: 230px 1fr;
+  /* display: grid;
+  grid-template-columns: 230px 1fr; */
+  display: flex;
 }
 
 .aside{
